--- a/about_us.html
+++ b/about_us.html
@@ -83,6 +83,7 @@
             <li><a href="https://youtube.com/@londonsuperkingscc1262">Youtube</a></li>
         </ul>
         <p>For fixtures, results, and player stats, visit our <a href="https://londonsuperkings.play-cricket.com/home">PlayCricket</a> page.</p>
+	<p>For more information, please contact us at <a href="mailto:@londonsuperkingscc@gmail.com">londonsuperkingscc@gmail.com</a>.</p>
     </div>
 </body>
 </html>
