--- a/contact.html
+++ b/contact.html
@@ -39,8 +39,12 @@
             background-color: #ccc;
         }
   </style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
+        <h1>Contact Admin Team - London SuperKings Cricket Club</h1>
+    </header>
 <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
