--- a/sponsership.html
+++ b/sponsership.html
@@ -55,8 +55,12 @@
             background-color: #ccc;
         }
     </style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header>
+        <h1>Sponser London SuperKings Cricket Club</h1>
+    </header>
 <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -82,7 +86,7 @@
         <ol>
             <li><strong>Official Partnerships:</strong> Become an official partner in one of the following categories: <a href="apparel_partner.html">Apparel Partner</a>, <a href="equipment_partner.html">Equipment Partner</a>, and <a href="food_partner.html">Food Partner</a></li>
             <li><strong>Match Day Sponsorship:</strong> Sponsor a specific match and benefit from extensive visibility on match day.</li>
-            <li><strong>Digital Sponsorship:</strong> Prominent placement of your brand on our website, youtube match sreams and social media platforms.</li>
+            <li><strong>Digital Sponsorship:</strong> Prominent placement of your brand on our website, youtube match streams and social media platforms.</li>
         </ol>
 
         <h2>Contact Us</h2>
