--- a/match_report_6th_april_team1.html
+++ b/match_report_6th_april_team1.html
@@ -76,7 +76,7 @@
             <li><a href="index.html">Home</a></li>
 	    <li><a href="about_us.html">About Us</a></li>
             <li><a href="fixtures.html">Fixtures</a></li>
-            <li><a href="sponsership.html">Sponsership</a></li>
+            <li><a href="sponsorship.html">Sponsorship</a></li>
             <li><a href="contact.html">Feedback</a></li>
         </ul>
     </nav>
