--- a/about_us.html
+++ b/about_us.html
@@ -72,8 +72,9 @@
     </nav>
     <div class="container">
         <h2>Welcome to London Cricket Club</h2>
-        <p>London SuperKings Cricket Club is a non-profit organization dedicated to promoting cricket in our community. We are committed to providing opportunities for players of all ages and skill levels to participate in the sport we love.</p>
-        <p>As a non-profit club, any profits generated, if any, are reinvested back into the club for the benefit of our members. This includes purchasing new equipment and kits, organizing events and social activities, and securing grounds for future years.</p>
+	<p>The London SuperKings Cricket Club operates as a non-profit organization, dedicating itself to promoting cricket within the local community.Players of all ages and abilities are provided opportunities to participate in the sport.</p>
+	<p>Any profits generated are reinvested into the club to benefit members. This includes purchasing new equipment and kits, organizing events and activities, and securing grounds for future seasons.</p>
+	<p>Should the club cease operations, we will direct all remaining funds to a high-impact charity, such as those recommended by "Giving What We Can"(https://www.givingwhatwecan.org/donate/organizations).</p>
         <p>Our club is run entirely by volunteers who are passionate about cricket and dedicated to serving our members. None of our volunteers are paid, and we rely on their generosity and commitment to keep our club running smoothly.</p>
         <h2>Connect with Us</h2>
         <p>Follow us on social media for the latest updates:</p>
