--- a/sponsorship.html
+++ b/sponsorship.html
@@ -55,7 +55,7 @@
 </head>
 <body>
 <header>
-        <h1>Sponser London SuperKings Cricket Club</h1>
+        <h1>Sponsor London SuperKings Cricket Club</h1>
     </header>
 <nav>
         <ul>
