--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,13 @@
         nav ul li a:hover {
             background-color: #ccc;
         }
+	.container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background-color: #fff;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
   </style>
 <link rel="stylesheet" href="styles.css">
 </head>
@@ -54,6 +61,7 @@
             <li><a href="contact.html">Feedback</a></li>
         </ul>
     </nav>
+<div class="container">
     <h1>Meet the admin team</h1>
     <ul class="horizontal-list">
         <li>Manish</li>
@@ -72,5 +80,6 @@
   		<textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br><br>
   		<input type="submit" value="Submit">
 	</form>
+</div>div
 </body>
 </html>
