--- a/contact.html
+++ b/contact.html
@@ -80,6 +80,6 @@
   		<textarea id="feedback" name="feedback" rows="4" cols="50"></textarea><br><br>
   		<input type="submit" value="Submit">
 	</form>
-</div>div
+</div>
 </body>
 </html>
