--- a/fixtures.html
+++ b/fixtures.html
@@ -34,30 +34,30 @@
                 <td>1st April, 2024</td>
                 <td>LondonSuperKings vs Desperados</td>
                 <td>Location TBD</td>
-                <td>Link TBD></td>
+                <td>Link TBD</td>
             </tr>
             <tr>
                 <td>6th April, 2024</td>
                 <td>Southwark CC first XI vs LondonSuperKings</td>
-                <td>Location TBD</td>
+                <td>SW183RT, Grass Wicket 1</td>
                 <td><a href="match_report_6th_april_team1.html">Match Summary Link</a></td>
             </tr>
             <tr>
                 <td>13th April, 2024</td>
                 <td>Southwark CC second XI vs LondonSuperKings</td>
-                <td>Location TBD</td>
+                <td>SW183RT, Grass Wicket 1</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
                 <td>13th April, 2024</td>
                 <td>Stokes Newington first XI vs LondonSuperKings</td>
-                <td>Location TBD</td>
+                <td>Hackney Marshes - Pitch C1</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
                 <td>20th April, 2024</td>
                 <td>Roehampton third XI vs LondonSuperKings</td>
-                <td>Location TBD</td>
+                <td>Barns Elms Sports Centre</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
@@ -151,6 +151,25 @@
                 <td>1st June, 2024</td>
                 <td>LondonSuperKings vs Pinner Challengers</td>
                 <td>Regents Park</td>
+                <td>Link TBD</td>
+            </tr>
+        </tbody>
+    </table>
+<h1>Sunday Match Fixtures</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Match</th>
+                <th>Location</th>
+                <th>Match Report</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>28th July, 2024</td>
+                <td>LondonSuperKings vs Brondesbury</td>
+                <td>TBD</td>
                 <td>Link TBD</td>
             </tr>
         </tbody>
