--- a/contact.html
+++ b/contact.html
@@ -74,6 +74,8 @@
         <li>Sneh</li>
         <li>Surjit</li>
    </ul>
+   <h1>Interested in joining Admin team?</h1>
+   <p>We are always looking for volunteers to join the admin team. Please check the <a href = "roles_and_responsibilities.html">different roles for the club</a> and express your interest to the admin team.</p>
     <h1>Leave Feedback for the admin team</h1>
 	<form action="https://formspree.io/f/xayrjdeb" method="POST">
   		<label for="feedback">Leave your feedback:</label><br>
