--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,9 @@
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+	p {
+            text-align: justify;
+        }
   </style>
 <link rel="stylesheet" href="styles.css">
 </head>
