--- a/roles_and_responsibilities.html
+++ b/roles_and_responsibilities.html
@@ -26,6 +26,15 @@
     </style>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="fixtures.html">Fixtures</a></li>
+            <li><a href="sponsorship.html">Sponsorship</a></li>
+            <li><a href="contact.html">Feedback</a></li>
+        </ul>
+    </nav>
     <h1>London Super Kings Club Roles and Responsibilities</h1>
     <div class="role">
         <h2>1. Players/Members</h2>
