--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         	<li>[Jan 2024] LSK is looking for volunteers to join the admin group. There are various positions that are open as listed in the 2024 club communication</li>
         </ul>
         <h2>Upcoming Matches</h2>
-        <p>No upcoming matches scheduled at the moment.</p>
+        <p>2024 season starts from 1st April. Please check the <a href="fixtures.html">Fixtures</a> tab for more details.</p>
         <h2>Join London Cricket Club</h2>
         <p>Interested in joining London Cricket Club? Whether you're a seasoned player or new to the sport, we welcome members of all ages and abilities.</p>
     </div>
