--- a/roles_and_responsibilities.html
+++ b/roles_and_responsibilities.html
@@ -24,8 +24,12 @@
             margin-left: 20px;
         }
     </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <h1>London Super Kings Club Roles and Responsibilities</h1>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
