--- a/fixtures.html
+++ b/fixtures.html
@@ -42,6 +42,12 @@
                 <td>SW183RT, Grass Wicket 1</td>
                 <td><a href="match_report_6th_april_team1.html">Match Summary Link</a></td>
             </tr>
+	    <tr>
+                <td>6th April, 2024</td>
+                <td>Ruislip Victoria vs LondonSuperKings</td>
+                <td>Oak Hill</td>
+                <td>Link TBD</td>
+            </tr>
             <tr>
                 <td>13th April, 2024</td>
                 <td>Southwark CC second XI vs LondonSuperKings</td>
@@ -69,12 +75,24 @@
             <tr>
                 <td>27th April, 2024</td>
                 <td>LondonSuperKings vs Desparados</td>
+                <td>Victoria Rec</td>
+                <td>Link TBD</td>
+            </tr>
+	    <tr>
+                <td>27th April, 2024</td>
+                <td>LondonSuperKings vs TBD</td>
                 <td>Regents Park</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
                 <td>4th May, 2024</td>
-                <td>LondonSuperKings vs LondonSuperKings</td>
+                <td>Ruislip Victoria vs LondonSuperKings</td>
+                <td>Oak Hill</td>
+                <td>Link TBD</td>
+            </tr>
+	    <tr>
+                <td>4th May, 2024</td>
+                <td>LondonSuperKings vs TBD</td>
                 <td>Regents Park</td>
                 <td>Link TBD</td>
             </tr>
