--- a/fixtures.html
+++ b/fixtures.html
@@ -45,7 +45,7 @@
 	    <tr>
                 <td>6th April, 2024</td>
                 <td>Ruislip Victoria vs LondonSuperKings</td>
-                <td>EN4 8JY</td>
+                <td>Location TBD</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
@@ -57,7 +57,7 @@
             <tr>
                 <td>13th April, 2024</td>
                 <td>Stokes Newington first XI vs LondonSuperKings</td>
-                <td>Hackney Marshes - Pitch C1</td>
+                <td>Location TBD</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
