--- a/about_us.html
+++ b/about_us.html
@@ -49,6 +49,12 @@
             background-color: #fff;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+	.values {
+            margin-top: 30px;
+        }
+        .value {
+            margin-bottom: 20px;
+        }
         h1, h2 {
             text-align: center;
         }
@@ -76,6 +82,20 @@
 	<p>Any profits generated are reinvested into the club to benefit members. This includes purchasing new equipment and kits, organizing events and activities, and securing grounds for future seasons.</p>
 	<p>Should the club cease operations, we will direct all remaining funds to a high-impact charity, such as those recommended by <a href="https://www.givingwhatwecan.org/donate/organizations">Giving What We Can</a>.</p>
         <p>Our club is run entirely by volunteers who are passionate about cricket and dedicated to serving our members. None of our volunteers are paid, and we rely on their generosity and commitment to keep our club running smoothly.</p>
+	<div class="values">
+        <div class="value">
+            <h2>1. We are a Community that Helps Each Other Out</h2>
+            <p>We're a team, on and off the field! Whether you're part of the admin team or not, let's look out for each other.</p>
+        </div>
+        <div class="value">
+            <h2>2. Treating Everyone with Respect</h2>
+            <p>We are magnanimous when we win and gracious when we lose.</p>
+        </div>
+        <div class="value">
+            <h2>3. Balancing Performance and Team Spirit</h2>
+            <p>It's not just about winning; it's about enjoying the game together. Let's aim for our best performance while creating an environment where everyone feels valued. After all, cricket is a team sport!</p>
+        </div>
+        </div>
         <h2>Connect with Us</h2>
         <p>Follow us on social media for the latest updates:</p>
         <ul>
