--- a/about_us.html
+++ b/about_us.html
@@ -58,6 +58,10 @@
         h1, h2 {
             text-align: center;
         }
+	h3 {
+            margin: 0;
+            padding: 0;
+        }
         p {
             text-align: justify;
         }
@@ -84,15 +88,16 @@
         <p>Our club is run entirely by volunteers who are passionate about cricket and dedicated to serving our members. None of our volunteers are paid, and we rely on their generosity and commitment to keep our club running smoothly.</p>
 	<div class="values">
         <div class="value">
-            <h2>1. We are a Community that Helps Each Other Out</h2>
+	    <h2>Club Values</h2>
+            <h3>1. We are a Community that Helps Each Other Out</h3>
             <p>We're a team, on and off the field! Whether you're part of the admin team or not, let's look out for each other.</p>
         </div>
         <div class="value">
-            <h2>2. Treating Everyone with Respect</h2>
+            <h3>2. Treating Everyone with Respect</h3>
             <p>We are magnanimous when we win and gracious when we lose.</p>
         </div>
         <div class="value">
-            <h2>3. Balancing Performance and Team Spirit</h2>
+            <h3>3. Balancing Performance and Team Spirit</h3>
             <p>It's not just about winning; it's about enjoying the game together. Let's aim for our best performance while creating an environment where everyone feels valued. After all, cricket is a team sport!</p>
         </div>
         </div>
