--- a/contact.html
+++ b/contact.html
@@ -73,6 +73,7 @@
         <li>Sahil</li>
         <li>Saket</li>
         <li>Saurabh</li>
+	<li>Shivam</li>
         <li>Shubham</li>
         <li>Sneh</li>
         <li>Surjit</li>
