--- a/fixtures.html
+++ b/fixtures.html
@@ -42,6 +42,12 @@
                 <td>SW183RT, Grass Wicket 1</td>
                 <td><a href="match_report_6th_april_team1.html">Match Summary Link</a></td>
             </tr>
+	    <tr>
+                <td>13th April, 2024</td>
+                <td>Southend-on-sea & EMT CV vs LondonSuperKings</td>
+                <td>SS1 2YN</td>
+                <td>Link TBD</td>
+            </tr>
             <tr>
                 <td>13th April, 2024</td>
                 <td>Southwark CC second XI vs LondonSuperKings</td>
@@ -172,6 +178,12 @@
             </tr>
         </thead>
         <tbody>
+	    <tr>
+                <td>23rd June, 2024</td>
+                <td>LondonSuperKings vs Vipers Elite CC</td>
+                <td>Tw10, Richmond</td>
+                <td>Link TBD</td>
+            </tr>
             <tr>
                 <td>28th July, 2024</td>
                 <td>LondonSuperKings vs Brondesbury</td>
