--- a/fixtures.html
+++ b/fixtures.html
@@ -105,6 +105,12 @@
         </thead>
         <tbody>
 	    <tr>
+                <td>12th May, 2024</td>
+                <td>LondonSuperKings vs LMV CC first XI</td>
+                <td>TBD</td>
+                <td>Link TBD</td>
+            </tr>
+	    <tr>
                 <td>23rd June, 2024</td>
                 <td>LondonSuperKings vs Vipers Elite CC</td>
                 <td>Tw10, Richmond</td>
