--- a/fixtures.html
+++ b/fixtures.html
@@ -111,6 +111,12 @@
                 <td>Link TBD</td>
             </tr>
 	    <tr>
+                <td>2nd June, 2024</td>
+                <td>LondonSuperKings vs canewdon CC</td>
+                <td>TBD</td>
+                <td>Link TBD</td>
+            </tr>
+	    <tr>
                 <td>23rd June, 2024</td>
                 <td>LondonSuperKings vs Vipers Elite CC</td>
                 <td>Tw10, Richmond</td>
@@ -119,6 +125,12 @@
             <tr>
                 <td>28th July, 2024</td>
                 <td>LondonSuperKings vs Brondesbury</td>
+                <td>TBD</td>
+                <td>Link TBD</td>
+            </tr>
+	    <tr>
+                <td>18th August, 2024</td>
+                <td>LondonSuperKings vs canewdon</td>
                 <td>TBD</td>
                 <td>Link TBD</td>
             </tr>
