--- a/fixtures.html
+++ b/fixtures.html
@@ -124,13 +124,13 @@
             </tr>
 	    <tr>
                 <td>18th August, 2024</td>
-                <td>LondonSuperKings vs canewdon</td>
+                <td>LondonSuperKings vs Canewdon CC</td>
                 <td>SS43TA</td>
                 <td>Link TBD</td>
             </tr>
 	    <tr>
-                <td>22nd September, 2024</td>
-                <td>LondonSuperKings vs canewdon CC</td>
+                <td>29th September, 2024</td>
+                <td>LondonSuperKings vs Canewdon CC</td>
                 <td>SS43TA</td>
                 <td>Link TBD</td>
             </tr>
