--- a/match_report_6th_april_team1.html
+++ b/match_report_6th_april_team1.html
@@ -87,12 +87,16 @@
             <p class="score">Final Score: Game hasn't started yet</p>
         </div>
         <div class="summary">
-            <p>A detailed summary of the match goes here. Game hasn't started yet</p>
-	    <p>Game hasn't started yet</p>
-	    <p>Game hasn't started yet</p>
-	    <p>Game hasn't started yet</p>
-        </div>
-	<a href="https://londonsuperkings.play-cricket.com/website/results/5607827" class="website-link">Visit our website for full scorecard</a>
+            <p>With the LSK members rolling in dough at their day jobs, Team 1 boasted the highest number of car owners on April 6th, with a whopping 3 car owners showing up for Match 1. But before the cricketing chaos even had a chance to unfold, our squad was thrust into a Herculean task: finding a parking spot near the ground. After embarking on a wild goose chase, zigzagging through the streets we finally stumbled upon a parking space.</p>
+	    <p>Now picture this: A sunny day, an Astro pitch, and two teams ready to give their all... or so they thought.</p>
+	    <p>Our team won the toss and, with great confidence, elected to bat first. The captain's speech was inspiring, but alas, it seemed to have been delivered to deaf ears. Captain asked everyone what is their fantasy for the match day(not joking) and everyone's mind raced towards a different bat than expected.</p>
+	    <p>It all started with the opening pair striding in confidently, only to be sent back to the pavilion faster than you can say "sticky wicket!" The middle order came and went like a revolving door at a busy hotel. Wickets fell faster than leaves in autumn leaves, and before we knew it, we were staring at a scoreboard that looked more like a malfunctioning calculator display. 82 runs - a total that wouldn't scare a team of under-10s playing in the backyard. Boundaries were as elusive as finding a needle in a haystack. Amidst the wreckage, Saket decided to take matters into his own hands. With a twinkle in his eye and a swing of his bat, he managed to smash a six over the shortest boundary.</p>
+            <p>But hey, every cloud has a silver lining, right? Our bowlers took the field with newfound determination. The target was low, and hope soared high. The opposition's batsmen, however, seemed to have caught the same bug that afflicted our team earlier.</p>
+	    <p>With every wicket, our hopes soared. Perhaps, just perhaps, we could pull off a miracle. But alas, it was not meant to be. The opposition stumbled their way to the target, losing 7 wickets in the process.</p>
+	    <p>In the end, it was a match that left everyone scratching their heads and wondering what exactly they had just witnessed. Our team trudged to the nearest pub thanks to the early finish where all the batsmen pinky promised the captain to make the ball despair into the sea in our next Team 1's match near the beach in Sounthend-on-the sea.</p>
+	    <p>We want everyone of you to be part of the fun, so please do provide your availability for the Saturday friendies in the Spond app. We are also starting Sunday friendlies from 12th May and would love to see you all on the field soon!</p>
+	</div>
+	<a href="https://londonsuperkings.play-cricket.com/website/results/6377288" class="website-link">Visit our website for full scorecard</a>
     </div>
 </body>
 </html>
