--- a/match_report_6th_april_team1.html
+++ b/match_report_6th_april_team1.html
@@ -84,7 +84,7 @@
         <h1>Match Report</h1>
         <div class="match-info">
             <p><span class="team">Southwark CC</span> vs <span class="team">London SuperKings</span></p>
-            <p class="score">Final Score: Game hasn't started yet</p>
+            <p class="score">Final Score: Southwark CC won by 3 wickets</p>
         </div>
         <div class="summary">
             <p>With the LSK members rolling in dough at their day jobs, Team 1 boasted the highest number of car owners on April 6th, with a whopping 3 car owners showing up for Match 1. But before the cricketing chaos even had a chance to unfold, our squad was thrust into a Herculean task: finding a parking spot near the ground. After embarking on a wild goose chase, zigzagging through the streets we finally stumbled upon a parking space.</p>
