--- a/fixtures.html
+++ b/fixtures.html
@@ -74,7 +74,7 @@
             </tr>
 	    <tr>
                 <td>27th April, 2024</td>
-                <td>LondonSuperKings vs TBD</td>
+                <td>LondonSuperKings vs Time Team CC</td>
                 <td>Regents Park</td>
                 <td>Link TBD</td>
             </tr>
