--- a/fixtures.html
+++ b/fixtures.html
@@ -86,7 +86,7 @@
             </tr>
 	    <tr>
                 <td>4th May, 2024</td>
-                <td>LondonSuperKings vs TBD</td>
+                <td>LondonSuperKings vs Hounslow Challengers</td>
                 <td>Regents Park</td>
                 <td>Link TBD</td>
             </tr>
