--- a/fixtures.html
+++ b/fixtures.html
@@ -44,8 +44,8 @@
             </tr>
 	    <tr>
                 <td>13th April, 2024</td>
-                <td>Southend-on-sea & EMT CV vs LondonSuperKings</td>
-                <td>SS1 2YN</td>
+                <td>LondonSuperKings vs Stokes Newington</td>
+                <td>SE9 2EU</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
