--- a/fixtures.html
+++ b/fixtures.html
@@ -39,20 +39,20 @@
             <tr>
                 <td>6th April, 2024</td>
                 <td>Southwark CC first XI vs LondonSuperKings</td>
-                <td>SW183RT, Grass Wicket 1</td>
+                <td>SW183RT</td>
                 <td><a href="match_report_6th_april_team1.html">Match Summary Link</a></td>
             </tr>
 	    <tr>
                 <td>13th April, 2024</td>
-                <td>LondonSuperKings vs Stokes Newington</td>
-                <td>SE9 2EU</td>
-                <td>Link TBD</td>
+                <td>LondonSuperKings vs EastEnd CC</td>
+                <td>SE9 2PQ</td>
+                <td><a href="https://londonsuperkings.play-cricket.com/website/results/6562532">Playcricket Link</a></td>
             </tr>
             <tr>
                 <td>13th April, 2024</td>
                 <td>Southwark CC second XI vs LondonSuperKings</td>
-                <td>SW183RT, Grass Wicket 1</td>
-                <td>Link TBD</td>
+                <td>SW183RT</td>
+                <td><a href="https://londonsuperkings.play-cricket.com/website/results/6377291">Playcricket Link</a</td>
             </tr>
             <tr>
                 <td>20th April, 2024</td>
@@ -111,9 +111,15 @@
                 <td>TBD</td>
             </tr>
 	    <tr>
+                <td>16th June, 2024</td>
+                <td>LondonSuperKings vs Hounslow Challengers</td>
+                <td>TW1 2NL</td>
+                <td>TBD</td>
+            </tr>
+	    <tr>
                 <td>23rd June, 2024</td>
                 <td>LondonSuperKings vs Vipers Elite CC</td>
-                <td>Tw10, Richmond</td>
+                <td>TW10 7RS</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
