--- a/fixtures.html
+++ b/fixtures.html
@@ -56,7 +56,7 @@
             </tr>
             <tr>
                 <td>20th April, 2024</td>
-                <td>Roehampton third XI vs LondonSuperKings</td>
+                <td>LondonSuperKings vs Elite CC</td>
                 <td>Barns Elms Sports Centre</td>
                 <td>Link TBD</td>
             </tr>
