--- a/fixtures.html
+++ b/fixtures.html
@@ -58,18 +58,18 @@
                 <td>20th April, 2024</td>
                 <td>LondonSuperKings vs Elite CC</td>
                 <td>Barns Elms Sports Centre</td>
-                <td>Link TBD</td>
+                <td><a href="https://londonsuperkings.play-cricket.com/website/results/6569580">Playcricket Link</a</td>
             </tr>
             <tr>
                 <td>20th April, 2024</td>
                 <td>LondonSuperKings vs Amazon CC</td>
                 <td>Regents Park</td>
-                <td>Link TBD</td>
+                <td><a href="https://londonsuperkings.play-cricket.com/website/results/6571237">Playcricket Link</a</td>
             </tr>
             <tr>
                 <td>27th April, 2024</td>
                 <td>LondonSuperKings vs Desparados</td>
-                <td>Victoria Rec</td>
+                <td>WD257HH</td>
                 <td>Link TBD</td>
             </tr>
 	    <tr>
@@ -126,6 +126,12 @@
                 <td>23rd June, 2024</td>
                 <td>LondonSuperKings vs Vipers Elite CC</td>
                 <td>TW10 7RS</td>
+                <td>Link TBD</td>
+            </tr>
+	    <tr>
+                <td>30th June, 2024</td>
+                <td>LondonSuperKings vs Players XI CC</td>
+                <td>UB35AQ</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
