--- a/fixtures.html
+++ b/fixtures.html
@@ -38,55 +38,55 @@
             </tr>
             <tr>
                 <td>6th April, 2024</td>
-                <td>Southwark CC first XI vs LondonSuperKings</td>
+                <td>Southwark CC first XI vs LondonSuperKings first XI</td>
                 <td>SW183RT</td>
                 <td><a href="match_report_6th_april_team1.html">Match Summary Link</a></td>
             </tr>
 	    <tr>
                 <td>13th April, 2024</td>
-                <td>LondonSuperKings vs EastEnd CC</td>
+                <td>LondonSuperKings second XI vs EastEnd CC first XI</td>
                 <td>SE9 2PQ</td>
                 <td><a href="https://londonsuperkings.play-cricket.com/website/results/6562532">Playcricket Link</a></td>
             </tr>
             <tr>
                 <td>13th April, 2024</td>
-                <td>Southwark CC second XI vs LondonSuperKings</td>
+                <td>Southwark CC second XI vs LondonSuperKings second XI</td>
                 <td>SW183RT</td>
                 <td><a href="https://londonsuperkings.play-cricket.com/website/results/6377291">Playcricket Link</a</td>
             </tr>
             <tr>
                 <td>20th April, 2024</td>
-                <td>LondonSuperKings vs Elite CC</td>
+                <td>LondonSuperKings second XI vs Elite CC</td>
                 <td>Barns Elms Sports Centre</td>
                 <td><a href="https://londonsuperkings.play-cricket.com/website/results/6569580">Playcricket Link</a</td>
             </tr>
             <tr>
                 <td>20th April, 2024</td>
-                <td>LondonSuperKings vs Amazon CC</td>
+                <td>LondonSuperKings first XI vs Amazon CC</td>
                 <td>Regents Park</td>
                 <td><a href="https://londonsuperkings.play-cricket.com/website/results/6571237">Playcricket Link</a</td>
             </tr>
             <tr>
                 <td>27th April, 2024</td>
-                <td>LondonSuperKings vs Desparados</td>
+                <td>LondonSuperKings first XI vs Desparados</td>
                 <td>WD257HH</td>
                 <td>Link TBD</td>
             </tr>
 	    <tr>
                 <td>27th April, 2024</td>
-                <td>LondonSuperKings vs Time Team CC</td>
+                <td>LondonSuperKings second XI vs Time Team CC</td>
                 <td>Regents Park</td>
                 <td>Link TBD</td>
             </tr>
             <tr>
                 <td>4th May, 2024</td>
-                <td>Ruislip Victoria vs LondonSuperKings</td>
+                <td>Ruislip Victoria vs LondonSuperKings second XI</td>
                 <td>EN4 8JY</td>
                 <td>Link TBD</td>
             </tr>
 	    <tr>
                 <td>4th May, 2024</td>
-                <td>LondonSuperKings vs Hounslow Challengers</td>
+                <td>LondonSuperKings first XI vs Hounslow Challengers</td>
                 <td>Regents Park</td>
                 <td>Link TBD</td>
             </tr>
